[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-sentinel-core"
version = "0.1.0"
description = "Trusted action boundary for coding agents with host-enforced policy, approvals, and audit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
]

[project.scripts]
prompt-sentinel = "prompt_sentinel.cli.main:main"

[tool.setuptools]
package-dir = {"" = "AGENT_CORE/prompt-sentinel-claude/prompt-sentinel-core/src"}

[tool.setuptools.packages.find]
where = ["AGENT_CORE/prompt-sentinel-claude/prompt-sentinel-core/src"]

[tool.setuptools.package-data]
prompt_sentinel = ["policies/*.json", "schemas/*.json"]