[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-sentinel-control-plane"
version = "0.1.0"
description = "Control-plane scaffold for Prompt_Sentinel policies and approvals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
